added css to portfolio page

--- a/contact.html
+++ b/contact.html
@@ -39,15 +39,14 @@
           </ul> 
         </nav>
         
-      
-        <!--Nav Bar Ends Here-->
+      <!--Nav Bar Ends Here-->
 
         <div class="container">
           <h1>Contact</h1>
           <hr>
 
           <!--form begins here-->
-
+<!--Still need to learn how to send info via forms-->
           <form>
               <div class="form-group">
                   <label for="formGroupExampleInput">Name</label>
